src/objects/Zuora__Payment__c.object
<CustomObject>
    <fields>
        <fullName>Payment_Method_Link__c</fullName>
        <formula>if(ISBLANK(Payment_Method__c),&apos;&apos;, 
HYPERLINK(&apos;/&apos;+ Payment_Method__c , Zuora__PaymentMethod__c ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>Zuora__PaymentMethod__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZuoraPaymentMethodId__c</fullName>
        <externalId>true</externalId>
        <label>ZuoraPaymentMethodId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>